--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="start-game-container" id="startGameContainer">
             
             <div class="player-cont">
-                <div class="player"> 
+                <div class="player" id="p1"> 
                     <span class="hero">You</span>
                     <div class="score">
                         <p>Score: </p>
@@ -25,7 +25,7 @@
                     <div class="attack-icon" id="attackIcon1"></div> 
                 </div>
 
-                <div class="player">
+                <div class="player" id="p2">
                     <span class="hero">AI</span>
                     <div class="score">
                         <p>Score: </p>
@@ -54,10 +54,21 @@
                 <div id="iconsDiv3"></div>
             </div>
         </div>
+
+        <!-- <div  class="race">
+            <input type="number" class="race" id="race" placeholder="Race to win">
+        </div> -->
         
         <div class="button-container">
             <button id="startGameBut">Start</button>
             <button id="endGameBut">End</button>
+        </div>
+
+        <div class="dialog-box-container" id="dialogBox">
+            <div class="dialog-box-cont">
+                <h1 id="greet"></h1>
+                <p id="message" class="message"></p>
+            </div>
         </div>
     </main>
 
