--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             </div>
         </div>
 
-        <!-- <div  class="race">
-            <input type="number" class="race" id="race" placeholder="Race to win">
-        </div> -->
+        <div  class="race">
+            <p id="raceP">RACE TO 5</p>
+            <!-- <input type="number" class="race" id="race" placeholder="Race to win"> -->
+        </div>
         
         <div class="button-container">
             <button id="startGameBut">Start</button>
