--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
 
         <div  class="race">
-            <p id="raceP">RACE TO 5</p>
-            <!-- <input type="number" class="race" id="race" placeholder="Race to win"> -->
+            <p id="raceP">RACE TO 3</p>
+            <input type="number" class="race" id="raceInput" placeholder="Race to win">
         </div>
         
         <div class="button-container">
