--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div  class="race">
             <p id="raceP">RACE TO 3</p>
-            <input type="number" class="race" id="raceInput" placeholder="Race to win">
+            <!-- <input type="number" class="race" id="raceInput" placeholder="Race to win"> -->
         </div>
         
         <div class="button-container">
